fix hover effect, adjust positioning of timeline's line component for the last 'timeline-wrap'

--- a/theodore-roosevelt/src/styles/sass/components/_buttons.sass
+++ b/theodore-roosevelt/src/styles/sass/components/_buttons.sass
@@ -11,7 +11,8 @@
     z-index: 99
     .read-more-btn
         display: inline-block
-        .read-more-btn:hover
+        cursor: pointer
+        &:hover
             display: block
             text-decoration: underline
 
