--- a/theodore-roosevelt/src/styles/sass/layout/_main.sass
+++ b/theodore-roosevelt/src/styles/sass/layout/_main.sass
@@ -39,9 +39,9 @@ main
                 // padding-left: 25px // ! Should hanges on media query
                 // margin-left: 9px // ! Should hanges on media query
                 border-left: 2px solid #1A1A1A
-                // * Hotfix bottom-padding for unique div
+                // * Hotfix bottom-padding for unique div #6
             // .timeline-wrap:nth-child(7)
-            .timeline-wrap.plus-padding
+            .timeline-wrap.plus-bot-padding
                 border: 2px red solid
                 padding-bottom: $mobile-space-lv-2
             .timeline-item
@@ -128,7 +128,7 @@ main
                     // top: calc(-(#{$mobile-space-lv-half} - #{$mobile-space-lv-2}))
                     top: calc(-36px)
                     // top: calc(#{$mobile-space-lv-half} - #{$mobile-space-lv-2} - 2.5px * -1)
-                    left: 6px
+                    left: 7px
                     width: 2px
                     height: calc(#{$mobile-space-lv-half} + #{$mobile-space-lv-2})
                     background: color.$text-color-90
